--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@supabase/auth-helpers-nextjs": "^0.8.7",
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/supabase-js": "^2.56.0",
-    "clsx": "^2.0.0",
+    "@types/leaflet": "^1.9.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
     "discord.js": "^14.14.1",
+    "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.303.0",
     "next": "15.5.0",
     "postcss": "^8.5.6",
@@ -23,8 +27,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "sanitize-html": "^2.17.0",
-    "tailwind-merge": "^2.2.0",
+    "tailwind-merge": "^2.6.0",
     "zod": "^4.1.0"
   },
   "devDependencies": {
@@ -37,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
 }
